middel UI final fixes with alignment?

--- a/mati/assets/stylesheets/style.css
+++ b/mati/assets/stylesheets/style.css
@@ -517,6 +517,12 @@ article img {
       padding-right: 0;
     }
 
+    .text-left-title {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
 }
 
 /* super high resolutions */
